# esmfold2-pipeline

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
deploy/image/: README.md  bootstrap-image.sh  qualify-image.sh
example_configs/miniprotein/: direct_sequence_no_structure.yaml  multichain_assembly_conditioning.yaml  multichain_hotspot.yaml  multichain_no_hotspot.yaml  single_chain_hotspot.yaml  single_chain_no_hotspot.yaml
example_configs/scfv/: custom_sequence.yaml  custom_template.yaml  hotspot_cdr_steering.yaml  multi_framework_no_hotspot.yaml  single_framework_no_hotspot.yaml
guide/: README.md  cli-reference.md  configuration.md  installation.md  outputs.md  runtime-and-scaling.md  structure-targets.md  validation.md
scripts/: build_framework_template_cifs.py
src/esmfold2_pipeline/: __init__.py  (+4 more)
tests/: README.md  test_artifact_writers.py  test_campaign_runner.py  test_cli.py  test_conditioning_validation.py  test_design_loop.py  test_design_losses.py  test_design_metrics.py  test_design_plm.py  test_design_prompts.py  test_esm_adapter_imports.py  test_exports.py  test_framework_coordinate_assets.py  test_framework_registry.py  test_gpu_smoke.py  test_image_contract.py  test_mock_vertical_slice.py  test_multi_gpu.py  test_planning_ids.py  test_protenix_msa.py  test_protenix_runner.py  test_recovery_and_status.py  test_sqlite_schema.py  test_structure_targets.py  test_validation_hotspots.py  test_validation_mock_runner.py  test_validation_msa_prefetch.py  test_validation_planning.py  test_validation_report.py  test_vhh_framework_records.py
(+108 files in other folders)
