[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "esmfold2-pipeline"
version = "0.1.0"
description = "Campaign orchestration for ESMFold2-native binder design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.83",
    "biotite>=1.6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "PyYAML>=6",
]

[project.scripts]
esmfold2-pipeline = "esmfold2_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esmfold2_pipeline = ["db/schema.sql"]
"esmfold2_pipeline.frameworks.scfv" = ["*.yaml", "*.cif", "legacy/*.yaml", "legacy/*.md", "reference_structures/*.cif"]
"esmfold2_pipeline.frameworks.vhh" = ["*.yaml", "*.cif", "legacy/*.yaml", "legacy/*.md", "reference_structures/*.cif"]
